cmake_minimum_required(VERSION 3.5.0)
project(2024 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(day1 day1.cpp)
add_executable(day2 day2.cpp)
add_executable(day2pt2 day2pt2.cpp)
add_executable(day3 day3.cpp)
add_executable(day3pt2 day3pt2.cpp)
add_executable(day4 day4.cpp)
add_executable(day4pt2 day4pt2.cpp)

add_executable(day5 day5.cpp)
add_executable(day5pt2 day5pt2.cpp)
add_executable(day6 day6.cpp)
add_executable(day6pt2 day6pt2.cpp)
